# Upscale-Image

./: .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  config.py  pipeline.py  quality.py  upscaler.py  utils.py
upcaled-indian_cultural/: upscaling_notes.md
upcaled-indian_cultural/01_people_portraits/original_512/: 1024__image_0187.txt  1024__image_0202.txt  1024__image_0422.txt  1024__image_0423.txt  1024__image_0433.txt  1024__image_0439.txt  1024__image_0448.txt  1024__image_0451.txt  512__image_0141.txt  512__image_0142.txt  512__image_0143.txt  512__image_0144.txt  512__image_0145.txt  512__image_0146.txt  512__image_0147.txt  512__image_0148.txt  512__image_0149.txt  512__image_0150.txt  512__image_0151.txt  512__image_0152.txt  512__image_0153.txt  512__image_0154.txt  512__image_0155.txt  512__image_0156.txt  512__image_0157.txt  512__image_0158.txt  512__image_0159.txt  512__image_0160.txt  512__image_0161.txt  512__image_0162.txt  512__image_0164.txt  512__image_0165.txt  512__image_0166.txt  512__image_0167.txt  512__image_0169.txt  512__image_0170.txt  512__image_0171.txt  512__image_0172.txt  512__image_0173.txt  512__image_0174.txt  (+170 more)
upcaled-indian_cultural/01_people_portraits/upscaled_512/: 256__image_0001.txt  256__image_0002.txt  256__image_0003.txt  256__image_0004.txt  256__image_0005.txt  256__image_0006.txt  256__image_0007.txt  256__image_0008.txt  256__image_0009.txt  (+47 more)
upcaled-indian_cultural/quality_report/: 01_people_portraits.csv  02_clothing_textiles.csv  03_architecture.csv  summary.csv  visual_qa_samples.csv
(+1056 files in other folders)
