[project]
name = "task-b"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"basicsr>=1.4.2",
	"lpips>=0.1.4",
	"numpy<2",
	"opencv-python>=4.12.0.88",
	"pandas>=2.3.2",
	"pillow>=11.3.0",
	"realesrgan>=0.3.0",
	"torch==2.1.2",
	"torchaudio==2.1.2",
	"torchvision==0.16.2",
	"tqdm>=4.67.1",
]
